--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -12,6 +12,22 @@
 }*/
 
 
+/* Main layout */
+
+a[highlight] {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.header {
+    padding: 0 var(--lumo-space-m);
+}
+
+.header h1.logo {
+    font-size: 1em;
+    margin: var(--lumo-space-m);
+}
+
 
 /* List view */
 .list-view .content {
@@ -34,3 +50,7 @@
    }
 }
 
+.dashboard-view . contact-stats {
+       font.size: 4em;
+       margin: 1em 0;
+}
